--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Nena's Amazing Website</title>
         <style>
             body {
-                background: rgb(9, 255, 0);
+                background: rgb(0, 65, 255);
                 color: rgb(45, 45, 45);
                 padding: 10px;
                 font-family: arial;
@@ -16,7 +16,7 @@
         
             /* navigation menu */
             nav {
-                background: rgb(9, 255, 0);
+                background: rgb(0, 68, 255);
                 margin: 0 auto;
                 margin-bottom: 20px;
                 display: flex;
@@ -25,7 +25,7 @@
             h1 {
                 display: flex;
                 align-items: center;
-                color: white;
+                color: rgb(251, 255, 0);
                 flex: 1;
                 margin: 0;
             }
