add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             }
             a {
                 text-decoration: none;
-                color: #fff;
+                color: rgb(251, 255, 0);
             }
         
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(251, 255, 0);
                 display: flex;
             }
             .sidebar {
@@ -58,7 +58,7 @@
                 padding: 15px;
             }
             #interests {
-                border: 4px silver ridge;
+                border: 4px rgb(0, 68, 255) ridge;
                 padding: 8px;
             }
             h2, h3 {
