add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 <div id="interests">
     <h3>Interests</h3>
     <ul>
-        <li>Thing 1</li>
-        <li>Thing 2</li>
-        <li>Thing 3</li>
+        <li>Nena</li>
+        <li>is</li>
+        <li>Slimey;)</li>
     </ul>
 </div>
 </div>
