--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
+                background: rgb(0, 68, 255);
                 margin: 0 auto;
                 display: flex;
                 padding: 10px;
@@ -46,7 +46,7 @@
     
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(251, 255, 0);
                 display: flex;
             }
             .content {
@@ -84,7 +84,7 @@
     <body>
       <div id="all-contents">
         <nav>
-            <h1>Sheba's Glorious Website</h1>
+            <h1>Nena's Website</h1>
             <ul id="nav-ul">
                 <li class="nav-li">
                   <a class="nav-a" href="index.html">Home</a>
