--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             h1 {
                 display: flex;
                 align-items: center;
-                color: rgb(255, 255, 255);
+                color: rgb(251, 255, 0);
                 flex: 1;
             }
             #nav-ul {
@@ -41,7 +41,7 @@
             }
             .nav-a {
                 text-decoration: none;
-                color: #fff;
+                color: hsl(251, 255, 0);
             }
     
             /* main container area beneath menu */
