--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -65,6 +65,7 @@
            
 			var positionX= 0
 			var points= 0
+			var speed= 100
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
