--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -65,15 +65,20 @@
            
 			var positionX= 0
 			var points= 0
-			var speed= 100
+			var speed= 10
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-			positionX = positionX + 10;
-	
+				
+			if (positionX > boardWidth) {
+		    speed *= -1; }
+			else if (positionX < 0) {
+				speed *= -1;
+			}
+			positionX = positionX + speed;
 			moveBoxTo(positionX);
 
 			};
@@ -86,6 +91,7 @@
 			function handleBoxClick() {
 				positionX = 0;
 				points = points + 1
+				speed = speed +3
 				changeBoxText(points);
 
 
